# buddhabrot-server

./: BmpManager.c  BmpManager.h  Bound.c  Bound.h  CMakeLists.txt  Color.c  Color.h  Complex.c  Complex.h  Coord.c  Coord.h  LinkedList.c  LinkedList.h  PixelCoord.h  Vector2.h  Xanadu.h  bmpServer.c  extract.c  extract.h  mandelbrot.c  mandelbrot.h  xanadu.h
